# ai-document-qa-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/: documents.py
app/chunking/: splitter.py
app/core/: config.py  logging.py
app/domain/: interfaces.py
app/embeddings/: provider.py
app/llm/: provider.py
app/models/: document.py
app/pdf/: extractor.py
app/prompts/: qa_prompt.py
app/repositories/: document_repo.py
app/schemas/: document.py
app/services/: rag_service.py
app/vector_store/: chroma.py
docs/: approach.md  architecture.md  prompts.md  tradeoffs.md
tests/: conftest.py  test_api.py  test_chunker.py  test_e2e_queries.py  test_extractor.py  test_main.py  test_pdf_extractor.py  test_providers.py  test_rag_service.py
