[tool.poetry]
name = "ai-document-qa-service"
version = "0.1.0"
description = "AI-Powered Document Q&A Service"
authors = ["AI <ai@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pgvector = "^0.3.1"
chromadb = "^0.5.3"
pymupdf = "^1.24.7"
tiktoken = "^0.7.0"
openai = "^1.35.10"
sentence-transformers = "^3.0.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
psutil = "^7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
black = "^24.4.2"
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
